--- a/MT2/manual/manual.adoc
+++ b/MT2/manual/manual.adoc
@@ -1,4 +1,4 @@
-= MT2 2.0.0
+= MT2 1.0.0
 Matthieu Brucher <matthieu.brucher@gmail.com>
 :doctype: book
 :source-highlighter: coderay
@@ -6,7 +6,7 @@ Matthieu Brucher <matthieu.brucher@gmail.com>
 // Uncomment next line to set page size (default is Letter)
 //:pdf-page-size: A4
 
-*MT2* is a free Open Source plugin for mono track dynamic compression/expansion. It features soft to hard knee.
+*MT2* is a free Open Source plugin emulating the MT2 pedal.
 
 image::MT2.png[GUI]
 
@@ -15,14 +15,6 @@ image::MT2.png[GUI]
 Here is how the parameters interact with the plugin:
 
 [square]
-* *RMS* changes the size of the window-like RMS computation. A value of 0 gives peak measurement.
-* *Attack* handles the speed at which the attack-release filter increases its detected value
-* *Release* handles the speed at which the attack-release filter decreases its detected value
-* *Threshold* modifies the threshold from which the compressor starts acting
-* *Ratio* modifies the slope of the compression curve. The higher the ratio, the more the compression. Ratios below 1 indicate expansion.
-* *Softness* is a comprise between soft knee and hard knee
-* *Make-up* Allows to increase the compressor output volume
-* *Dry/Wet* balances the amount of processed signal versus input signal
 
 == Bugs
 
